[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-energy_grid"
version = "0.1.0"
description = "Energy Grid environment for OpenEnv — power distribution RL"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "numpy>=1.19.0",
]

[project.scripts]
server = "energy_grid_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["energy_grid_env", "energy_grid_env.server"]
package-dir = { "energy_grid_env" = "energy_grid_env", "energy_grid_env.server" = "energy_grid_env/server" }
